added forgot password route and controller and updated swagger
